apps/media/jellyseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
spec:
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - pc
      containers:
        - name: jellyseerr
          image: ghcr.io/hotio/jellyseerr
          ports:
            - containerPort: 5055
          volumeMounts:
            - mountPath: /app/config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-config
